# mpi-tasks

./: CMakeLists.txt  kernels.cpp  main.cpp
include/: context.h  event.h  events.def  mpits.h  scheduler.h  task.h  worker.h
include/comm/: channel.h  init.h  message.def  message.h
include/utils/: any.h  functional.h  logging.h  queue.h  string.h
src/: event.cpp  main.cpp  scheduler.cpp  task.cpp  worker.cpp
src/comm/: channel.cpp  init.cpp  message.cpp
test/: events.cc
test/comm/: channel_test.cc  message_test.cc
test/experiments/: signals.cc
test/utils/: any_test.cc  queue.cc  string_test.cc
